# project_embed

./: .gitignore  .gitmodules  README.md
hashlink/: README.md
hashlink/cpp_embed/: .gitignore  CMakeLists.txt  README.md  compile.ps1  main.cpp
hashlink/cpp_embed/hx/: Main.hx  compile.hxml
hashlink/native_extension/: CMakeLists.txt  Main.hx  README.md  compile.hxml
hashlink/native_extension/lib/: ring_buffer.c
hashlink/native_extension/lib/ringbuffer/: RingBuffer.hx
squirrel/: CMakeLists.txt  README.md  compile.ps1  example.nut  main.cpp
